--- a/mini-with-cjk/Dockerfile
+++ b/mini-with-cjk/Dockerfile
@@ -16,4 +16,6 @@ RUN apk add --update --no-cache gcc g++ make openjdk8-jre ruby-dev ruby ruby-nok
 WORKDIR /documents
 VOLUME /documents
 
-CMD ["/bin/sh"]
+COPY ../entrypoint.sh /bin/entrypoint.sh
+
+ENTRYPOINT ["/bin/entrypoint.sh"]
